--- a/css/style.css
+++ b/css/style.css
@@ -480,11 +480,6 @@ body.offcanvas {
     .bac-narrow-content {
       padding: 2em 1em; } }
 
-.bac-obra,
-.bac-work{
-  /* padding-top: 2.5em !important; */
-  padding-bottom: 3em !important;
-}
 .img-responsive{
   max-width: 100%;
   min-height:50px;
@@ -493,8 +488,12 @@ body.offcanvas {
   margin: 0;
   padding: 0; }
 
+.bac-obra{
+  padding: 0;
+  margin: 0; }
+.bac-work{
+  padding-bottom: 3em !important; }
 
-.bac-obra,
 .bac-about,
 .bac-work,
 .bac-services,
@@ -762,7 +761,11 @@ h2.bac-heading-us{
 .fancy-collapse-panel .panel-default > .panel-heading {
   padding: 0; }
 
+.panel-heading {
+  padding: 0; }
+
 .panel-heading a {
+  text-align: left;
   padding: 15px 25px;
   display: block;
   width: 100%;
@@ -770,7 +773,7 @@ h2.bac-heading-us{
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background-color: #000;
+  background-color: #006587;
   color: #fff;
   position: relative;
   -webkit-box-shadow: none !important;
@@ -787,9 +790,13 @@ h2.bac-heading-us{
   box-shadow: none !important;
   border: none; }
 
+.panel-heading a:hover {
+  color: white;
+  background-color: #0085a7;
+}
 .panel-heading a:after {
   font-family: "Trebuchet MS", "overpass" !important;
-  content: "\ea0e";
+  content: "";
   position: absolute;
   right: 20px;
   font-size: 20px;
@@ -1765,7 +1772,9 @@ h2.bac-heading{
   font-size: 1.2em; }
 .side-building .row a:hover{
   color: #5588aa; }
-.side-building .row a, a:focus, a:hover {
+.side-building .row a,
+.side-building .row a:focus,
+.side-building .row a:hover {
   text-decoration: none;
   outline: 0;
   margin-right: 10px;
@@ -1908,3 +1917,107 @@ svg {
   font-weight: 900;
   font-family: 'brown-thin';
   text-align: center; }
+
+.obra-quote{
+  margin-bottom: 10px;
+  text-align: justify;
+  padding: 20px; }
+  @media screen and (max-width: 992px){
+    .obra-quote{
+      padding: 10px; } }
+.obra-description{
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 3em; }
+.obra-description p{
+  text-align: justify;
+}
+
+  #thumbnail-preview-indicators a{
+    top: 50%;
+    bottom: 50%;
+    font-size: 35px;
+    opacity: 0.8;
+    color: white; }
+  #thumbnail-preview-indicators a:hover{
+    font-size: 35px;
+    color: orange; }
+.carousel-control.right {
+  right: -10px !important;
+}
+  #thumbnail-preview-indicators {
+    position: relative;
+    overflow: hidden;
+    border-bottom: 3px solid orange;
+    margin-bottom: 2em; }
+  #thumbnail-preview-indicators .slides .slide-1,
+  #thumbnail-preview-indicators .slides .slide-2,
+  #thumbnail-preview-indicators .slides .slide-3 {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+  #thumbnail-preview-indicators,
+  #thumbnail-preview-indicators .slides,
+  #thumbnail-preview-indicators .slides .slide-1,
+  #thumbnail-preview-indicators .slides .slide-2,
+  #thumbnail-preview-indicators .slides .slide-3 {
+    height: 480px;
+  }
+  #thumbnail-preview-indicators .slides .slide-1 {
+    background-image: url(../images/obra11.jpg); }
+  #thumbnail-preview-indicators .slides .slide-2 {
+    background-image: url(../images/obra5.jpg); }
+  #thumbnail-preview-indicators .slides .slide-3 {
+    background-image: url(../images/obra9.jpg); }
+  #thumbnail-preview-indicators .carousel-inner .item .carousel-caption {
+    top: 20%;
+    bottom: inherit; }
+  /* CAROUSEL INDICATORS */
+  #thumbnail-preview-indicators .carousel-indicators li,
+  #thumbnail-preview-indicators .carousel-indicators li.active {
+    width: 152px;
+    height: auto;
+    max-height: 102px;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 1px; }
+  #thumbnail-preview-indicators .carousel-indicators li.active {
+    border: 1px solid orange; }
+  #thumbnail-preview-indicators .carousel-indicators li > .thumbnail {
+    width: 150px;
+    height: auto;
+    max-height: 100px;
+    overflow: hidden;
+    opacity: 0.8;
+    display: block;
+    padding: 0;
+    margin-bottom: 0;
+    background-color: #fff;
+    border: none;
+    border-radius: 2px;
+    transition: all 550ms ease-out;
+  }
+  #thumbnail-preview-indicators .carousel-indicators li:hover > .thumbnail,
+  #thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
+    position: relative;
+    display: block;
+    border: 1px solid white;
+    opacity: 1;
+    transform: scale(1.5);
+    z-index: 1;
+  }
+  #thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
+    border: 1px solid orange;
+  }
+
+  @media screen and (min-width: 480px) {
+  }
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1024px) {
+  }
+  @media screen and (min-width: 1200px) {
+  }
+  @media screen and (min-width: 1440px) {
+  }
