--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ figure {
     margin: 20px auto 0px auto;
     color: #b3b3b3;
     font-style: italic;
-    font-family: "Trebuchet MS", "overpass", sans-serif; }
+    font-family: "futura-lt", "Trebuchet MS", "overpass", sans-serif; }
     @media screen and (max-width: 480px) {
       figure figcaption {
         width: 100%; } }
@@ -167,7 +167,7 @@ figure {
         text-decoration: none;
         position: relative;
         padding: 10px 0;
-        font-family: "Trebuchet MS", "overpass", sans-serif !important;
+        font-family: "futura-lt", "Trebuchet MS", "overpass", sans-serif !important;
         -webkit-transition: 0.3s;
         -o-transition: 0.3s;
         transition: 0.3s; }
@@ -230,11 +230,11 @@ figure {
       bottom: 6px; }}
 
   #get-in-touch p {
-    font-family: "Trebuchet MS", 'Overpass', Helvetica;
+    font-family: "futura-lt", "Trebuchet MS", 'Overpass', Helvetica;
     font-size: 1.3em;
     line-height: 0.7; }
   #get-in-touch .copy, #get-in-touch  a{
-    font-family: "Trebuchet MS", 'Overpass', Helvetica;
+    font-family: "futura-lt", "Trebuchet MS", 'Overpass', Helvetica;
     font-size: 1.2em;
     padding-bottom: 1em;
     line-height: 1.5; }
@@ -415,7 +415,7 @@ figure {
           line-height: 1.5;
           margin-bottom: 30px;
           font-weight: 300;
-          font-family: "Trebuchet MS","overpass", sans-serif; }
+          font-family: "futura-lt", "Trebuchet MS","overpass", sans-serif; }
           #bac-hero .flexslider .slider-text > .slider-text-inner h2 a {
             color: rgba(0, 0, 0, 0.8); }
         #bac-hero .flexslider .slider-text > .slider-text-inner .heading-section {
@@ -440,7 +440,7 @@ figure {
           #bac-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
             color: #000;
             border: 1px solid #aaa;
-            font-family: "Trebuchet MS", "Overpass", serif;
+            font-family: "futura-lt", "Trebuchet MS", "Overpass", serif;
             background: #fff !important; }
             /* bg button */
             #bac-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
@@ -503,15 +503,15 @@ body.offcanvas {
   clear: both;
   width: 100%;
   display: block; }
-  @media screen and (max-width: 768px) {
-    .bac-work,
-    .bac-obra,
-    .bac-about,
-    .bac-contact {
-      padding-top: 5em;
-      padding-bottom: 8em; }
-    #bac-hero{
-      margin-bottom: 1em; } }
+@media screen and (max-width: 768px) {
+  .bac-work,
+  .bac-contact {
+    padding-top: 5em;
+    padding-bottom: 8em; }
+  .bac-about{
+    padding-top: 2em; }
+  #bac-hero{
+    margin-bottom: 1em; } }
 
 .bac-tour{
   clear: both;
@@ -549,7 +549,7 @@ body.offcanvas {
 
 .bac-heading {
   font-size: 20px;
-  font-family: "Trebuchet MS", "Overpass", sans-serif !important;
+  font-family: "futura-lt", "Trebuchet MS", "Overpass", sans-serif !important;
   margin-bottom: 3em;
   font-weight: 500;
   text-transform: uppercase;
@@ -694,7 +694,7 @@ h2.bac-heading-us{
 
 .about-desc p {
   text-align: center;
-  font-family: "Trebuchet MS", "overpass", sans-serif;
+  font-family: "futura-lt", "Trebuchet MS", "overpass", sans-serif;
   line-height: 1.5;
   font-size: 1.4em; }
   @media screen and (max-width: 768px) {
@@ -795,7 +795,7 @@ h2.bac-heading-us{
   background-color: #0085a7;
 }
 .panel-heading a:after {
-  font-family: "Trebuchet MS", "overpass" !important;
+  font-family: "futura-lt", "Trebuchet MS", "overpass" !important;
   content: "";
   position: absolute;
   right: 20px;
@@ -892,7 +892,7 @@ h2.bac-heading-us{
       text-transform: uppercase; }
     .bac-feature .bac-text p {
       font-size: 1.2em;
-      font-family: "Trebuchet MS", 'Overpass' !important;
+      font-family: "futura-lt", "Trebuchet MS", 'Overpass' !important;
       font-weight: 600;
       color: rgba(0, 0, 0, 0.75);
     }
@@ -1141,7 +1141,7 @@ h2.bac-heading-us{
     .project .desc h3 {
       font-size: 22px;
       font-weight: 500;
-      font-family: "Trebuchet MS", "overpass", monospace !important;
+      font-family: "futura-lt", "Trebuchet MS", "overpass", monospace !important;
       text-transform: uppercase;
       text-decoration: underline;
       letter-spacing: 1px;
@@ -1159,7 +1159,7 @@ h2.bac-heading-us{
     .project .desc span {
       display: block;
       color: #ccc;
-      font-family: "Trebuchet MS", "overpass", Helvetica;
+      font-family: "futura-lt", "Trebuchet MS", "overpass", Helvetica;
       font-size: 17px;
       text-align: justify;
       -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
@@ -1263,7 +1263,7 @@ h2.bac-heading-us{
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "Trebuchet MS", "overpass", serif !important;
+    font-family: "futura-lt", "Trebuchet MS", "overpass", serif !important;
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1314,7 +1314,7 @@ h2.bac-heading-us{
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "Trebuchet MS", "overpass", sans-serif !important;
+    font-family: "futura-lt", "Trebuchet MS", "overpass", sans-serif !important;
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1441,7 +1441,7 @@ h2.bac-heading-us{
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Trebuchet MS", "Overpass", sans-serif;
+  font-family: "futura-lt", "Trebuchet MS", "Overpass", sans-serif;
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1468,7 +1468,7 @@ h2.bac-heading-us{
 .btn-primary {
   background: #006587;
   color: #fff;
-  font-family: "Trebuchet MS", 'overpass';
+  font-family: "futura-lt", "Trebuchet MS", 'overpass';
   font-weight: bold;
   font-size: 1em;
   border: 2px solid #006587; }
@@ -1710,7 +1710,7 @@ h2.bac-heading-us{
   padding: 10px !important; }
 
 .js .animate-box {
-  opacity: 0; }
+  opacity: 1; }
   @media screen and (max-width: 768px) {
     .animate-box {
       animation: none; } }
@@ -1735,7 +1735,7 @@ h2.bac-heading-us{
   #quienes p{
     font-size: 1.4em;
     text-align: justify;
-    font-family: "Trebuchet MS", "overpass", Helvetica !important; }
+    font-family: "futura-lt", "Trebuchet MS", "overpass", Helvetica !important; }
   @media screen and (max-width: 1300px){
     #quienes{
       padding: 20px 1vw !important;
@@ -1799,7 +1799,7 @@ h2.bac-heading{
 .detalle-obra{
   color: #000;
   text-align: justify;
-  font-family: "Trebuchet MS", 'Overpass' !important;
+  font-family: "futura-lt", "Trebuchet MS", 'Overpass' !important;
   letter-spacing: 1px;
   font-size: 1.2em;
   font-weight: 500; }
@@ -1918,106 +1918,123 @@ svg {
   font-family: 'brown-thin';
   text-align: center; }
 
+.obra-datos{
+  padding-top: 20px; }
 .obra-quote{
   margin-bottom: 10px;
   text-align: justify;
-  padding: 20px; }
+  padding: 15px; }
   @media screen and (max-width: 992px){
     .obra-quote{
       padding: 10px; } }
+.obra-title{
+  font-size: 18px;
+  margin-bottom: 1em;
+  letter-spacing: 1px; }
 .obra-description{
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 3em; }
-.obra-description p{
-  text-align: justify;
+  .obra-description p{
+    text-align: justify; }
+.carousel-control.right {
+  right: -10px !important; }
+.size-b{
+  font-size: 13px !important;
+}
+#thumbnail-preview-indicators a{
+  top: 50%;
+  bottom: 50%;
+  font-size: 30px !important;
+  opacity: 0.8;
+  color: white; }
+#thumbnail-preview-indicators a:hover{
+  color: orange; }
+#thumbnail-preview-indicators {
+  position: relative;
+  overflow: hidden;
+  border-bottom: 3px solid orange;
+  margin-bottom: 1em; }
+#thumbnail-preview-indicators .slides .slide-1,
+#thumbnail-preview-indicators .slides .slide-2,
+#thumbnail-preview-indicators .slides .slide-3 {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat; }
+#thumbnail-preview-indicators,
+#thumbnail-preview-indicators .slides,
+#thumbnail-preview-indicators .slides .slide-1,
+#thumbnail-preview-indicators .slides .slide-2,
+#thumbnail-preview-indicators .slides .slide-3 {
+  height: 480px; }
+#thumbnail-preview-indicators .slides .slide-1 {
+  background-image: url(../images/obra11.jpg); }
+#thumbnail-preview-indicators .slides .slide-2 {
+  background-image: url(../images/obra5.jpg); }
+#thumbnail-preview-indicators .slides .slide-3 {
+  background-image: url(../images/obra9.jpg); }
+#thumbnail-preview-indicators .carousel-inner .item .carousel-caption {
+  top: 20%;
+  bottom: inherit; }
+/* CAROUSEL INDICATORS */
+#thumbnail-preview-indicators .carousel-indicators li,
+#thumbnail-preview-indicators .carousel-indicators li.active {
+  width: 152px;
+  height: auto;
+  max-height: 102px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 1px; }
+#thumbnail-preview-indicators .carousel-indicators li.active {
+  border: 1px solid orange; }
+#thumbnail-preview-indicators .carousel-indicators li > .thumbnail {
+  width: 150px;
+  height: auto;
+  max-height: 100px;
+  overflow: hidden;
+  opacity: 0.8;
+  display: block;
+  padding: 0;
+  margin-bottom: 0;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  transition: all 550ms ease-out;
+}
+#thumbnail-preview-indicators .carousel-indicators li:hover > .thumbnail,
+#thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
+  position: relative;
+  display: block;
+  border: 1px solid white;
+  opacity: 1;
+  transform: scale(1.5);
+  z-index: 1;
+}
+#thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
+  border: 1px solid orange;
 }
 
-  #thumbnail-preview-indicators a{
-    top: 50%;
-    bottom: 50%;
-    font-size: 35px;
-    opacity: 0.8;
-    color: white; }
-  #thumbnail-preview-indicators a:hover{
-    font-size: 35px;
-    color: orange; }
-.carousel-control.right {
-  right: -10px !important;
-}
-  #thumbnail-preview-indicators {
-    position: relative;
-    overflow: hidden;
-    border-bottom: 3px solid orange;
-    margin-bottom: 2em; }
-  #thumbnail-preview-indicators .slides .slide-1,
-  #thumbnail-preview-indicators .slides .slide-2,
-  #thumbnail-preview-indicators .slides .slide-3 {
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+@media screen and (max-width: 1024px) {
+  #thumbnail-preview-indicators .carousel-indicators li > .thumbnail{
+    width: 20vw;
   }
-  #thumbnail-preview-indicators,
-  #thumbnail-preview-indicators .slides,
-  #thumbnail-preview-indicators .slides .slide-1,
-  #thumbnail-preview-indicators .slides .slide-2,
-  #thumbnail-preview-indicators .slides .slide-3 {
-    height: 480px;
-  }
-  #thumbnail-preview-indicators .slides .slide-1 {
-    background-image: url(../images/obra11.jpg); }
-  #thumbnail-preview-indicators .slides .slide-2 {
-    background-image: url(../images/obra5.jpg); }
-  #thumbnail-preview-indicators .slides .slide-3 {
-    background-image: url(../images/obra9.jpg); }
-  #thumbnail-preview-indicators .carousel-inner .item .carousel-caption {
-    top: 20%;
-    bottom: inherit; }
-  /* CAROUSEL INDICATORS */
   #thumbnail-preview-indicators .carousel-indicators li,
   #thumbnail-preview-indicators .carousel-indicators li.active {
-    width: 152px;
-    height: auto;
-    max-height: 102px;
-    background-color: transparent;
-    border: 1px solid white;
-    border-radius: 1px; }
-  #thumbnail-preview-indicators .carousel-indicators li.active {
-    border: 1px solid orange; }
-  #thumbnail-preview-indicators .carousel-indicators li > .thumbnail {
-    width: 150px;
-    height: auto;
-    max-height: 100px;
-    overflow: hidden;
-    opacity: 0.8;
-    display: block;
-    padding: 0;
-    margin-bottom: 0;
-    background-color: #fff;
-    border: none;
-    border-radius: 2px;
-    transition: all 550ms ease-out;
+    width: calc(20vw + 2px);
+    margin: 0; }
+  .carousel-indicators {
+    width: 100%;
+    bottom: 1.5vh;
+    margin: 0;
+    left: auto;
+    right: auto;
   }
-  #thumbnail-preview-indicators .carousel-indicators li:hover > .thumbnail,
-  #thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
-    position: relative;
-    display: block;
-    border: 1px solid white;
-    opacity: 1;
-    transform: scale(1.5);
-    z-index: 1;
-  }
-  #thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
-    border: 1px solid orange;
-  }
-
-  @media screen and (min-width: 480px) {
-  }
-  @media screen and (min-width: 768px) {
-  }
-  @media screen and (min-width: 1024px) {
-  }
-  @media screen and (min-width: 1200px) {
-  }
-  @media screen and (min-width: 1440px) {
-  }
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1024px) {
+}
+@media screen and (min-width: 1200px) {
+}
+@media screen and (min-width: 1440px) {
+}
