--- a/css/style.css
+++ b/css/style.css
@@ -2013,7 +2013,8 @@ svg {
 #thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover {
   border: 1px solid orange;
 }
-
+.carousel-indicators {
+  bottom: 0px; }
 @media screen and (max-width: 1024px) {
   #thumbnail-preview-indicators .carousel-indicators li > .thumbnail{
     width: 20vw;
@@ -2024,7 +2025,7 @@ svg {
     margin: 0; }
   .carousel-indicators {
     width: 100%;
-    bottom: 1.5vh;
+    bottom: 0;
     margin: 0;
     left: auto;
     right: auto;
